tests/Spire.SourceGenerators.Tests/Exhaustiveness/cases/Struct_VarPatternWildcard.cs
//@ should_fail
// var pattern is a wildcard catch-all — SPIRE010 (same as discard)
using Spire;
namespace TestNs
{
    [DiscriminatedUnion]
    partial struct Shape
    {
        [Variant] public static partial Shape Circle(double radius);
        [Variant] public static partial Shape Square(int sideLength);
    }

    class Consumer
    {
        int Test(Shape s) => s switch //~ ERROR
        {
            var x => 0,
        };
    }
}
